# bwa-mem2-shm

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: FMI_search.cpp  FMI_search.h  bandedSWA.cpp  bntseq.cpp  bntseq.h  bwamem.cpp  bwamem.h  bwtindex.cpp  fastmap.cpp  kswv.cpp  main.cpp  main.h  read_index_ele.cpp  read_index_ele.h  runsimd.cpp  shared_memory.cpp  shared_memory.h
